--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "pinia": "^2.0.13",
     "vue": "^3.2.36",
+    "vue-google-signin-button": "^1.0.4",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
